chore: change schedule structure
