# app/Http/Requests/Schedule/AssignScheduleRequest.php
@@ -1,41 +1,0 @@
-<?php
-
-namespace App\Http\Requests\Schedule;
-
-use App\Rules\AvailableSchedule;
-use Illuminate\Foundation\Http\FormRequest;
-use Illuminate\Http\Response;
-use Illuminate\Contracts\Validation\Validator;
-use Illuminate\Validation\ValidationException;
-
-class AssignScheduleRequest extends FormRequest
-{
-    /**
-     * Determine if the user is authorized to make this request.
-     *
-     * @return bool
-     */
-    public function authorize()
-    {
-        return true;
-    }
-
-    /**
-     * Get the validation rules that apply to the request.
-     *
-     * @return array
-     */
-    public function rules()
-    {
-        return [
-            'client_id' => ['required', 'exists:users,id', 'numeric'],
-            'pet_id' => ['required', 'exists:pets,id', 'numeric'],
-        ];
-    }
-
-    protected function failedValidation(Validator $validator)
-    {
-        $response = new Response(['error' => $validator->errors()->all()], 422);
-        throw new ValidationException($validator, $response);
-    }
-}
