# storage/api-docs/api-docs.json
@@ -357,169 +357,6 @@
                 ]
             }
         },
-        "/api/auth/schedule/open": {
-            "get": {
-                "tags": [
-                    "schedules"
-                ],
-                "summary": "list all open schedules",
-                "operationId": "listOpenSchedules",
-                "responses": {
-                    "200": {
-                        "description": "Validation Response"
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/auth/schedule/pending": {
-            "get": {
-                "tags": [
-                    "schedules"
-                ],
-                "summary": "list all pending schedules",
-                "operationId": "listPendingSchedules",
-                "responses": {
-                    "200": {
-                        "description": "Validation Response"
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/auth/schedule/confirmed": {
-            "get": {
-                "tags": [
-                    "schedules"
-                ],
-                "summary": "list all confirmed schedules",
-                "operationId": "listConfirmedSchedules",
-                "responses": {
-                    "200": {
-                        "description": "Validation Response"
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/auth/schedule/canceled": {
-            "get": {
-                "tags": [
-                    "schedules"
-                ],
-                "summary": "list all canceled schedules",
-                "operationId": "listCanceledSchedules",
-                "responses": {
-                    "200": {
-                        "description": "Validation Response"
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/auth/schedule/{id}/assign": {
-            "post": {
-                "tags": [
-                    "schedules"
-                ],
-                "summary": "client assign to a schedule",
-                "operationId": "assignSchedule",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "schedule id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "client_id": {
-                                        "type": "integer"
-                                    },
-                                    "pet_id": {
-                                        "type": "integer"
-                                    }
-                                },
-                                "type": "object",
-                                "example": {
-                                    "client_id": 12,
-                                    "pet_id": 55
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Successfully updated"
-                    },
-                    "204": {
-                        "description": "Content not found"
-                    },
-                    "400": {
-                        "description": "This schedule cannot be assigned as its status is no longer open"
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/auth/schedule/{id}/cancel": {
-            "post": {
-                "tags": [
-                    "schedules"
-                ],
-                "summary": "cancel schedule",
-                "operationId": "cancelSchedule",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "schedule id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            }
-        },
         "/api/auth/schedule/{id}": {
             "get": {
                 "tags": [
